{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "df45c6bf-124b-4ac0-84cf-31baf1cd3382",
            "actions": [
                {
                    "name": "ClubScreenPosition",
                    "type": "Value",
                    "id": "ca514a5a-7cb3-4ca9-9b2d-387ad866f8fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClubDown",
                    "type": "Value",
                    "id": "e6b92c41-f7ac-40e0-ab9d-631a5ecd130d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClubUp",
                    "type": "Value",
                    "id": "d4e80a4a-daab-421a-87ce-6147bd83d05e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "683e18d6-f879-4579-b0df-60d16f6888a2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "ClubScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd94ab32-b05e-47dd-9b8b-d015e26e7dbc",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ClubScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05cdce52-0197-470b-b475-b61455a4072c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "ClubDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d62bd7f5-5de4-4976-b632-b13e2a185607",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ClubDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22e2d046-a3c3-4405-af80-1db641ec1798",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "ClubUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "653f0feb-25a5-4fc9-8543-bc268ca3321b",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ClubUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>/{Back}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>/{Back}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>/{Back}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}